--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,2 +1,7 @@
+Version 0.1.1
+    - Converted linked list _tail into a weak pointer
+    - prepend function now correctly updates _tail
+    - Added custom drop function (since rust's built in function works recursively and can cause a stack overflow)
+
 Version 0.1.0
     - Initial Commit
